--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -7,5 +7,21 @@
     <script src="app.js" defer></script>
     <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <p>Rock Paper Scissors</p>
+    <button
+      onclick="
+    const randomNumber = Math.random()
+
+    if(randomNumber > 0 && randomNumber <= 1/3) {
+      console.log(rock);
+    }
+
+    "
+    >
+      Rock
+    </button>
+    <button>Paper</button>
+    <button>Scissors</button>
+  </body>
 </html>
