--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -1,27 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="app.js" defer></script>
     <title>Rock Paper Scissors</title>
   </head>
   <body>
     <p>Rock Paper Scissors</p>
     <button
       onclick="
-    const randomNumber = Math.random()
-
-    if(randomNumber > 0 && randomNumber <= 1/3) {
-      console.log(rock);
-    }
-
+      playGame('rock');
     "
     >
       Rock
     </button>
-    <button>Paper</button>
-    <button>Scissors</button>
+
+    <button
+      onclick="
+      playGame('paper');
+    "
+    >
+      Paper
+    </button>
+
+    <button
+      onclick="
+      playGame('scissors');
+    "
+    >
+      Scissors
+    </button>
+    <button onclick="resetScores()">Reset Scores</button>
+    <script>
+      let score = {
+        wins: 0,
+        losses: 0,
+        ties: 0,
+      };
+      function resetScores() {
+        score.wins = 0;
+        score.losses = 0;
+        score.ties = 0;
+        alert(
+          `Scores have been reset to Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`
+        );
+      }
+      function playGame(playerMove) {
+        const computerMove = pickComputerMove();
+        let result = "";
+        if (playerMove === "scissors") {
+          if (computerMove === "rock") {
+            result = "You lose.";
+          } else if (computerMove === "paper") {
+            result = "You win.";
+          } else if (computerMove === "scissors") {
+            result = "Tie.";
+          }
+        } else if (playerMove === "paper") {
+          if (computerMove === "rock") {
+            result = "You win.";
+          } else if (computerMove === "paper") {
+            result = "Tie.";
+          } else if (computerMove === "scissors") {
+            result = "You lose.";
+          }
+        } else if (playerMove === "rock") {
+          if (computerMove === "rock") {
+            result = "Tie.";
+          } else if (computerMove === "paper") {
+            result = "You lose.";
+          } else if (computerMove === "scissors") {
+            result = "You win.";
+          }
+        }
+
+        if (result === "You win.") {
+          score.wins += 1;
+        } else if (result === "You lose.") {
+          score.losses += 1;
+        } else if (result === "Tie.") {
+          score.ties += 1;
+        }
+
+        alert(
+          `  You picked ${playerMove}. Computer picked ${computerMove}. ${result}
+           Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`
+        );
+      }
+
+      function pickComputerMove() {
+        const randomNumber = Math.random();
+
+        let computerMove = "";
+
+        if (randomNumber >= 0 && randomNumber < 1 / 3) {
+          computerMove = "rock";
+        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+          computerMove = "paper";
+        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+          computerMove = "scissors";
+        }
+
+        return computerMove;
+      }
+    </script>
   </body>
 </html>
