--- a/02-external-lessons/01-objects.html
+++ b/02-external-lessons/01-objects.html
@@ -1,42 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Objects in JavaScript</title>
+    <title>Objects</title>
   </head>
   <body>
     <script>
-      const products = {
-        name: "shirt",
-        "delivery-time": 3,
-        ratings: {
-          stars: 5,
-          reviews: 87,
-        },
-        fun: function product2() {
-          console.log("This is part of product 1");
-        },
+      /*
+       const product = {
+         name: 'socks',
+         price: 1090
+       };
+       console.log(product);
+       console.log(product.name);
+       console.log(product.price);
+
+       product.name = 'cotton socks';
+       console.log(product);
+
+       product.newProperty = true;
+       console.log(product);
+
+       delete product.newProperty;
+       console.log(product);
+       */
+
+      /*
+       const product2 = {
+         name: 'shirt',
+         'delivery-time': '1 day',
+         rating: {
+           stars: 4.5,
+           count: 87
+         },
+         fun: function function1() {
+           console.log('function inside object');
+         }
+       };
+       console.log(product2);
+       console.log(product2.name);
+       console.log(product2['name']);
+       console.log(product2['delivery-time']);
+
+       console.log(product2.rating.count);
+       product2.fun();
+
+       console.log(typeof console.log);
+
+       console.log(JSON.stringify(product2));
+
+       const jsonString = JSON.stringify(product2);
+       console.log(JSON.parse(jsonString));
+
+
+       console.log('hello'.length);
+       console.log('hello'.toUpperCase());
+
+       const object1 = {
+         message: 'hello',
+         price: 799
+       };
+       const object2 = object1;
+
+       object1.message = 'Good job!';
+       console.log(object1);
+       console.log(object2);
+
+       const object3 = {
+         message: 'Good job!',
+         price: 799
+       };
+       console.log(object1 === object3);
+
+       // const message = object1.message;
+       const { message, price: cost } = object1;
+       console.log(message);
+       console.log(cost);
+
+       const object4 = {
+         // message: message,
+         message,
+         // method: function function1() {
+
+         // },
+         // method: function() {
+
+         // },
+         method() {
+
+         }
+       };
+       */
+      // 8a
+      const ball = {
+        name: "basketball",
+        price: 2095,
       };
-      // JSON
-      //Json is similar to Objects in JS. Only difference is that JSON has limited features.
-      //Json cannot have functions.
-      // Json is understood by every language and is used to communicate between different computers and even codebases with different langauges coz JSON is sort of universal language to talk. Like English for humans.
-      // We also use JSON to store Data
+      console.table(ball);
 
-      // converts objects to json
-      const jsonData = JSON.stringify(products);
-      console.log(jsonData);
+      // 8b
+      ball.price += 500;
+      console.log(ball.price);
 
-      // convert JSON to javascript objects
-      const objectData = JSON.parse(jsonData);
-      console.log(objectData);
+      // 8c
+      ball["delivery-time"] = "3 Days";
+      console.log(ball);
 
-      // Local Storage
-      // This helps us store our values a bit more permanently.
-      // Until now I have only used Variables to store data. But it is temporary.
-      // When we refresh the page or close and open the app, the data is lost since, variables free up space when not in use.
-      //
+      // 8d
+      const product1 = {
+        name: "Milk",
+        price: 5,
+      };
+
+      const product2 = {
+        name: "Eggs",
+        price: 10,
+      };
+
+      function comparePrice(product1, product2) {
+        return Math.min(product1.price, product2.price);
+      }
+      const cheaperProduct = comparePrice(product1, product2);
+      console.log(cheaperProduct);
+      // console.log(cheaperProduct);
+
+      // 8e was to compare if two objects had same data or no.
+
+      // 8f
+      // This is am interesting way to repeat strings.
+      const testString = "test";
+      console.log(testString.repeat(3));
     </script>
   </body>
 </html>
