Auto Play feature added

--- a/01-rock-paper-scissor/index.html
+++ b/01-rock-paper-scissor/index.html
@@ -44,5 +44,6 @@
     <p class="js-score"></p>
 
     <button onclick="resetScores()" class="reset-scores">Reset Scores</button>
+    <button onclick="autoPlay()" class="auto-play">Auto Play</button>
   </body>
 </html>
